cabal-version:       2.4

name:                tsuru
version:             1.0.0
author:              zhengyan peh
maintainer:          zypeh.geek@gmail.com

tested-with:         GHC == 8.6.5 

executable tsuru
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -Wcompat
  main-is:           tsuru.hs
  build-depends:     base
                   , binary
                   , bytestring